# fathom

./: .editorconfig  .gitattributes  .gitignore  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  abort.m  build.rs  bytes.m  ddl.m  dump.m  flake.nix  icc2.ddl  main.m  opentype.ddl  package.json  parse.m  png.ddl  roadmap.md  rustfmt.toml  shell.nix
crates/ddl/: Cargo.toml  README.md
crates/ddl-compile-doc/: Cargo.toml  README.md
crates/ddl-compile-doc/src/: lib.rs
crates/ddl-compile-rust/: Cargo.toml  README.md
crates/ddl-compile-rust/src/: lib.rs
crates/ddl-elaborate/: Cargo.toml  README.md
crates/ddl-elaborate/src/: lib.rs
crates/ddl-parse/: Cargo.toml  README.md
crates/ddl-parse/src/: grammar.lalrpop  lexer.rs  lib.rs
crates/ddl-rt/: Cargo.toml
crates/ddl-rt/src/: lib.rs  read.rs  write.rs
crates/ddl-test/: Cargo.toml  README.md
crates/ddl-test-util/: Cargo.toml
crates/ddl-test-util/src/: lib.rs
crates/ddl-test/src/: lib.rs  support.rs
crates/ddl-test/src/support/: mod.rs  snapshot.rs
crates/ddl-test/src/support/directives/: lexer.rs  mod.rs  parser.rs
crates/ddl/src/: core.rs  delaborate.rs  diagnostics.rs  elaborate.rs  lexer.rs  lib.rs  literal.rs  surface.rs
crates/ddl/src/ast/: core.rs  surface.rs
crates/ddl/src/ast/core/: binary.rs  semantics.rs  typing.rs
crates/ddl/src/ast/rust/: emit.rs
crates/ddl/src/binary/: mod.rs  read.rs
crates/ddl/src/compile/: doc.rs  rust.rs
crates/ddl/src/compile/rust/: compile.rs  emit.rs  (+1 more)
crates/ddl/src/concrete/: grammar.lalrpop  mod.rs
crates/ddl/src/core/: compile.rs  grammar.lalrpop  mod.rs  pretty.rs  semantics.rs  typing.rs  validate.rs
crates/ddl/src/elaborate/: mod.rs
crates/ddl/src/parse/: grammar.lalrpop  lexer.rs  mod.rs
crates/ddl/src/pass/: core_to_pretty.rs  core_to_rust.rs  core_to_surface.rs  surface_to_core.rs  surface_to_doc.rs  surface_to_pretty.rs
crates/ddl/src/rust/: emit.rs  mod.rs
crates/ddl/src/surface/: delaborate.rs  elaborate.rs  grammar.lalrpop  mod.rs  pretty.rs
ddl2/crates/ddl-test/: Cargo.toml
examples/features/type-params/: Cargo.toml  build.rs
examples/features/type-params/src/: lib.rs  pair.ddl
examples/formats/edid/: Cargo.toml  build.rs
examples/formats/edid/src/: edid.ddl  lib.rs
examples/formats/edid/tests/: parse.rs
examples/formats/object_id/: Cargo.toml  build.rs
examples/formats/object_id/src/: lib.rs  object_id.ddl
examples/formats/object_id/tests/: parse.rs
experiments/rust-minimal/: Cargo.toml  README.md  example.txt
experiments/rust-minimal/examples/: hurkens.txt  prelude.txt
experiments/rust-minimal/examples/formats/: edid.txt  gif.txt  opentype.txt  stl-binary.txt
experiments/rust-minimal/src/: alloc.rs  core.rs  driver.rs  env.rs  grammar.lalrpop  lib.rs  main.rs  surface.rs
experiments/rust-minimal/src/core/: binary.rs  semantics.rs
experiments/rust-minimal/src/surface/: distillation.rs  elaboration.rs  grammar.lalrpop  lexer.rs  pretty.rs
experiments/rust-minimal/tests/: source_tests.rs
experiments/rust-minimal/tests/succeed/: formats.txt  primitives.txt  stress.txt
experiments/rust-prototype-v3/fathom-cli/: Cargo.toml
experiments/rust-prototype-v3/fathom-cli/src/: commands.rs  lib.rs  main.rs
fathom/: Cargo.toml  README.md
fathom-cli/: Cargo.toml
fathom-cli/src/: cli.rs  lib.rs  main.rs
fathom-cli/src/commands/: compile.rs  doc.rs
fathom-cli/tests/: check.rs  check_examples.rs  compile.rs  data.rs  doc.rs  source_tests.rs
fathom-cli/tests/cli/: data.rs  doc.rs
fathom-rt/: Cargo.toml
fathom-test/: Cargo.toml
fathom-test-util/: Cargo.toml
fathom-test-util/src/: lib.rs
fathom-test/src/: lib.rs
fathom-test/src/directives/: lexer.rs
fathom-test/src/support/: mod.rs
fathom-test/src/support/directives/: mod.rs  parser.rs
fathom-test/tests/: tests.rs
fathom/examples/formats/: object-id.txt  opentype.txt
fathom/examples/formats/ideas/: ico.txt
fathom/examples/paradoxes/: hurkens.txt
fathom/src/: alloc.rs  ast.rs  by_addr.rs  core.rs  diagnostics.rs  driver.rs  env.rs  files.rs  lang.rs  lexer.rs  lib.rs  literal.rs  main.rs  pass.rs  reporting.rs  source.rs  surface.rs  symbol.rs
fathom/src/ast/: surface.rs
fathom/src/ast/core/: grammar.lalrpop
fathom/src/core/: binary.rs  compile.rs  ir.rs  pretty.rs  prim.rs  semantics.rs
fathom/src/driver/: compiler.rs  diagnostic.rs
fathom/src/driver/diagnostic/: api.rs
fathom/src/lang/: core.rs  surface.rs
fathom/src/lang/core/: binary.rs  grammar.lalrpop  lexer.rs  semantics.rs  typing.rs
fathom/src/lang/rust/: emit.rs
fathom/src/lang/surface/: grammar.lalrpop  lexer.rs
fathom/src/pass/: core_to_pretty.rs  core_to_rust.rs  core_to_surface.rs  surface_to_core.rs  surface_to_doc.rs  surface_to_pretty.rs
fathom/src/pass/core_to_rust/: diagnostics.rs
fathom/src/pass/surface_to_doc/: style.css
fathom/src/surface/: distillation.rs  elaboration.rs  grammar.lalrpop  lexer.rs  pretty.rs  pretty2.rs  scope_tree.rs
fathom/src/surface/elaboration/: order.rs  patterns.rs  reporting.rs  unification.rs
fathom/src/surface/pretty2/: printer.rs
fathom/tests/: cli_tests.rs  source_tests.rs
fathom/tests/succeed/: equality.txt  primitives.txt
fathom/tests/succeed/ann/: array-literal-array16.txt  fun-literal-identity-mono-input-ann-placeholder.txt  fun-literal-identity-mono-input-ann-type.txt  fun-literal-identity-poly-input-placeholder.txt  fun-literal-identity-poly.txt  record-literal-pair-dependent.txt  unit-literal-expr.txt  unit-literal-format.txt  unit-literal-type.txt
fathom/tests/succeed/format-repr/: pair-dependent.txt  primitives.txt
fathom/tests/succeed/fun-elim/: ann-identity-mono-0.txt  ann-identity-mono-2.txt
fathom/tests/succeed/fun-literal/: identity-poly.txt  mono-input-ann-weird.txt
fathom/tests/succeed/fun-type/: identity-poly-arrow.txt
fathom/tests/succeed/let/: id-type.txt  let-def-placeholder-ann.txt
fathom/tests/succeed/match/: check-const-redundant.txt  synth-const-1.txt  synth-simple-redundant.txt
fathom/tests/succeed/record-type/: generic-point.txt
(+1764 files in other folders)
