[package]
name = "ddl"
version = "0.1.0"
readme = "README.md"
license = "Apache-2.0"
authors = ["Brendan Zabarauskas <bjzaba@yahoo.com.au>"]
description = "A binary data definition language"
homepage = "https://github.com/yeslogic/ddl"
repository = "https://github.com/yeslogic/ddl"
publish = false

[features]
default = ["cli"]
cli = [
    "rustyline",
    "structopt",
    "term_size",
]

[[bin]]
name = "ddl"
required-features = ["cli"]

[dependencies]
byteorder = "1.2"
codespan = "0.1.2"
codespan-reporting = "0.1.3"
failure = "0.1.1"
im = "11.0.0"
lalrpop-util = "0.15.2"
moniker = { version = "0.2.2", features = ["codespan", "num-bigint"] }
num-bigint = "0.2.0"
num-traits = "0.2.4"
pretty = { version = "0.5.2", features = ["termcolor"] }
unicode-xid = "0.1.0"

# cli dependencies
rustyline = { version = "1.0.0", optional = true }
structopt = { version = "0.2.10", optional = true }
term_size = { version = "0.3.1", optional = true }

[build-dependencies]
lalrpop = "0.15.2"

[dev-dependencies]
goldenfile = "0.7.1"
pretty_assertions = "0.5.1"
