[package]
name = "ddl"
version = "0.1.0"
readme = "README.md"
license = "Apache-2.0"
authors = ["Brendan Zabarauskas <bjzaba@yahoo.com.au>"]
description = "A binary data definition language"
homepage = "https://github.com/yeslogic/ddl"
repository = "https://github.com/yeslogic/ddl"
edition = "2018"
publish = false

[features]
default = ["cli"]
cli = [
    "linefeed",
    "structopt",
    "term_size",
]

[[bin]]
name = "ddl"
required-features = ["cli"]

[dependencies]
byteorder = "1.2"
codespan = "0.2.0"
codespan-reporting = "0.2.0"
failure = "0.1.2"
im = "12.2.0"
lalrpop-util = "0.16.0"
moniker = { version = "0.5.0", features = ["codespan", "im", "num-bigint"] }
num-bigint = "0.2.0"
num-traits = "0.2.6"
petgraph = "0.4.13"
pretty = { version = "0.5.2", features = ["termcolor"] }
unicode-xid = "0.1.0"

# cli dependencies
linefeed = { version = "0.5.1", optional = true }
structopt = { version = "0.2.10", optional = true }
term_size = { version = "0.3.1", optional = true }

[build-dependencies]
lalrpop = "0.16.0"

[dev-dependencies]
goldenfile = "0.7.1"
pretty_assertions = "0.5.1"
