[package]
name = "fathom-rt"
version = "0.1.0"
authors = ["YesLogic Pty. Ltd. <info@yeslogic.com>"]
edition = "2018"
publish = false # TODO: Remove this when we are ready to publish to crates.io

description = "Runtime support for Fathom"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
proptest = "0.9"
