[package]
name = "fathom-test-util"
version = "0.1.0"
authors = ["YesLogic Pty. Ltd. <info@yeslogic.com>"]
edition = "2018"
publish = false # NOTE: This crate is only needed for testing

description = "Integration tests for the binary data description language"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codespan-reporting =  "0.11"
fathom = { version = "0.1.0", path = "../fathom" }
lazy_static = "1.4"
