[package]
name = "fathom-test"
version = "0.1.0"
authors = ["YesLogic Pty. Ltd. <info@yeslogic.com>"]
edition = "2018"
publish = false # NOTE: This crate is only needed for testing

description = "Integration tests for Fathom"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_fs = "1.0"
codespan-reporting =  "0.11"
fathom = { path = "../fathom" }
fathom-runtime = { path = "../fathom-runtime" }
fathom-test-util = { path = "../fathom-test-util" }
difference = "2.0"
json = "0.12"
lazy_static = "1.4"
pretty = "0.10"
regex = "1.4"
unindent = "0.1"
walkdir = "2.3.2"
libtest-mimic = "0.3.0"
