[package]
name = "fathom"
version = "0.1.0"
authors = ["YesLogic Pty. Ltd. <info@yeslogic.com>"]
repository = "https://github.com/yeslogic/fathom"
edition = "2018"
publish = false

description = "A language for declaratively specifying binary data formats"
readme = "../README.md"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[test]]
name = "source_tests"
harness = false

[dependencies]
atty = "0.2.14"
clap = { version = "3.0.10", features = ["derive"] }
codespan-reporting = "0.11.1"
fxhash = "0.2"
itertools = "0.10"
lalrpop-util = "0.19.5"
logos = "0.12"
pretty = "0.11.2"
rpds = "0.11"
scoped-arena = "0.3"
string-interner = "0.14.0"
termsize = "0.1.6"

[build-dependencies]
lalrpop = "0.19.5"

[dev-dependencies]
globwalk = "0.8"
itertools = "0.10.1"
libtest-mimic = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
walkdir = "2.3.2"
