[package]
name = "fathom"
version = "0.1.0"
authors = ["YesLogic Pty. Ltd. <info@yeslogic.com>"]
repository = "https://github.com/yeslogic/fathom"
edition = "2021"
rust-version = "1.67.0"
publish = false

description = "A language for declaratively specifying binary data formats"
readme = "../README.md"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[test]]
name = "source_tests"
harness = false

[dependencies]
atty = "0.2.14"
clap = { version = "4.0", features = ["derive"] }
codespan-reporting = "0.11.1"
fxhash = "0.2"
itertools = "0.10"
lalrpop-util = "0.19.5"
lasso = { version = "0.6.0", features = ["multi-threaded", "ahasher", "inline-more"] }
levenshtein = "1.0.5"
logos = "0.12"
once_cell = { version = "1.17.0", features = ["parking_lot"] } # TODO: remove once `std::cell::once_cell` is stabilized
pretty = "0.11.2"
rpds = "0.12.0"
scoped-arena = "0.4.1"
termsize = "0.1.6"

[build-dependencies]
lalrpop = { git = "https://github.com/kmeakin/lalrpop", branch = "raw-identifiers" }

[dev-dependencies]
diff = "0.1.12"
globwalk = "0.8"
itertools = "0.10.1"
libtest-mimic = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
trycmd = "0.14.10"
walkdir = "2.3.2"
