[package]
name = "ddl-compile-doc"
version = "0.1.0"
authors = ["Brendan Zabarauskas <bjzaba@yahoo.com.au>"]
license = "Apache-2.0"
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codespan-reporting = { git = "https://github.com/brendanzab/codespan" }
ddl-concrete = { path = "../ddl-concrete" }
