[package]
name = "ddl-elaborate"
version = "0.1.0"
authors = ["Brendan Zabarauskas <bjzaba@yahoo.com.au>"]
edition = "2018"
publish = false

description = "Elaborator from the concrete syntax of the DDL to the core syntax"
readme = "README.md"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codespan-reporting = { git = "https://github.com/brendanzab/codespan", rev = "ea8a4014a7034a0d6839400b02cdf7c731af53c1" }
ddl-concrete = { path = "../ddl-concrete" }
ddl-core = { path = "../ddl-core" }
itertools = "0.8.0"
