[package]
name = "ddl-test-util"
version = "0.1.0"
authors = ["Brendan Zabarauskas <bjzaba@yahoo.com.au>"]
edition = "2018"
publish = false # NOTE: This crate is only needed for testing

description = "Integration tests for the binary data description language"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codespan = { git = "https://github.com/brendanzab/codespan", rev = "0a5d9a0daa1baf3142b119df56c19a82b7c2a46a" }
codespan-reporting = { git = "https://github.com/brendanzab/codespan", rev = "0a5d9a0daa1baf3142b119df56c19a82b7c2a46a" }
ddl = { version = "0.1.0", path="../ddl" }
ddl-rt = { version = "0.1.0", path="../ddl-rt" }
lazy_static = "1.3"
