[package]
name = "ddl"
version = "0.1.0"
authors = ["Brendan Zabarauskas <bjzaba@yahoo.com.au>"]
edition = "2018"
publish = false

description = "A language for declaratively specifying binary data formats."
readme = "../../README.md"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codespan = { git = "https://github.com/brendanzab/codespan", rev = "0a5d9a0daa1baf3142b119df56c19a82b7c2a46a" }
codespan-reporting = { git = "https://github.com/brendanzab/codespan", rev = "0a5d9a0daa1baf3142b119df56c19a82b7c2a46a" }
ddl-rt = { version = "0.1.0", path="../ddl-rt" }
itertools = "0.8"
lalrpop-util = "0.17"
pretty = "0.5"

[build-dependencies]
lalrpop = "0.17"
