[package]
name = "fathom-minimal"
version = "0.1.0"
authors = ["Brendan Zabarauskas <bjzaba@yahoo.com.au>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[test]]
name = "source_tests"
harness = false

[dependencies]
codespan-reporting = "0.11.1"
fxhash = "0.2"
lalrpop-util = "0.19.5"
logos = "0.12"
pretty = "0.10"
rpds = "0.9"
scoped-arena = "0.3"
string-interner = "0.13"
structopt = "0.3"
termsize = "0.1.6"

[build-dependencies]
lalrpop = "0.19.5"

[dev-dependencies]
itertools = "0.10.1"
libtest-mimic = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
walkdir = "2.3.2"
