[package]
name = "ddl-test"
version = "0.1.0"
authors = ["Brendan Zabarauskas <bjzaba@yahoo.com.au>"]
edition = "2018"
publish = false # NOTE: This crate is only needed for testing

description = "Integration tests for the binary data description language"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
assert_fs = "0.11"
codespan =  "0.4"
codespan-reporting =  "0.4"
ddl = { version = "0.1.0", path = "../ddl" }
ddl-rt = { version = "0.1.0", path = "../ddl-rt" }
ddl-test-util = { version = "0.1.0", path = "../ddl-test-util" }
difference = "2.0"
json = "0.11"
lazy_static = "1.4"
pretty = "0.5"
regex = "1.2"
unindent = "0.1"
