[package]
name = "fathom-cli"
version = "0.1.0"
authors = ["YesLogic Pty. Ltd. <info@yeslogic.com>"]
edition = "2018"
publish = false # TODO: Remove this when we are ready to publish to crates.io

description = "CLI interface for Fathom"
license = "Apache-2.0"

[[bin]]
name = "fathom"
path = "src/main.rs"

[[test]]
name = "cli"
path = "tests/cli/lib.rs"

[[test]]
name = "source_tests"
harness = false

[dependencies]
anyhow = "1.0"
codespan-reporting = "0.11"
fathom = { version = "0.1.0", path = "../fathom" }
pretty = "0.10"
structopt = "0.3"
exitcode = "1.1.2"

[dev-dependencies]
assert_cmd = "1"
fathom-test = { path = "../fathom-test" }
libtest-mimic = "0.3.0"
predicates = "1"
