[package]
name = "ddl-bitmap"
version = "0.0.0"
license = "Apache-2.0"
publish = false

[dependencies]
ddl-util = { path = "../../../ddl-util" }

[build-dependencies]
codespan = { git = "https://github.com/brendanzab/codespan", rev = "e25e243", version = "0.1.0" }
codespan-reporting = { git = "https://github.com/brendanzab/codespan", rev = "e25e243", version = "0.1.0" }
ddl = { path = "../../.." }

[dev-dependencies]
difference = "1.0.0"
pretty_assertions = "0.4.0"
